removed slash from filename

--- a/fold_change_correlation_unipept_metagomics.nb.html
+++ b/fold_change_correlation_unipept_metagomics.nb.html
@@ -1701,14 +1701,14 @@ $(document).ready(function () {
 <!-- rnb-text-begin -->
 <!-- rnb-text-end -->
 <!-- rnb-chunk-begin -->
-<!-- rnb-source-begin eyJkYXRhIjoiYGBgclxucGxvdChjYXJzKVxuYGBgIn0= -->
-<pre class="r"><code>plot(cars)</code></pre>
+<!-- rnb-source-begin eyJkYXRhIjoiYGBgclxudW5pcGVwdF9mcCA9ICdyZXN1bHRzL21ldGFHT21pY3MvTWV0YUdPbWljc19Db21wYXJlX1VQUzJfVVBTMVxuYGBgIn0= -->
+<pre class="r"><code>unipept_fp = 'results/metaGOmics/MetaGOmics_Compare_UPS2_UPS1</code></pre>
 <!-- rnb-source-end -->
 <!-- rnb-chunk-end -->
 <!-- rnb-text-begin -->
 <!-- rnb-text-end -->
 
-<div id="rmd-source-code">LS0tCnRpdGxlOiAiRm9sZCBDaGFuZ2UgQ29ycmVsYXRpb246IFVuaXBlcHQgYW5kIE1ldGFHT21pY3MiCm91dHB1dDogaHRtbF9ub3RlYm9vawotLS0KCgpgYGB7cn0KcGxvdChjYXJzKQpgYGAKCg==</div>
+<div id="rmd-source-code">LS0tCnRpdGxlOiAiRm9sZCBDaGFuZ2UgQ29ycmVsYXRpb246IFVuaXBlcHQgYW5kIE1ldGFHT21pY3MiCm91dHB1dDogaHRtbF9ub3RlYm9vawotLS0KCgpgYGB7cn0KdW5pcGVwdF9mcCA9ICdyZXN1bHRzL21ldGFHT21pY3MvTWV0YUdPbWljc19Db21wYXJlX1VQUzJfVVBTMQpgYGAKCg==</div>
 
 
 
